--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
-    font-family: Continental;
-    font-weight: 900;
-    line-height: 1.2rem;
-    color: #b2b2b2;
+  font-family: Continental;
+  font-weight: 900;
+  line-height: 1.2rem;
+  color: #b2b2b2;
+  cursor: cell;
 }
