--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -7,7 +7,7 @@ section {
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  width: 100vw; 
+  width: 100vw;
   justify-content: center;
 }
 
@@ -20,10 +20,16 @@ section {
 .product-wrapper {
   display: flex;
   width: 100vw;
-  height: 100Vh;
+  height: 100vh;
   overflow: hidden;
 }
 
 .product-wrapper > * {
   flex: 1;
+}
+
+.buy-btn {
+  margin: auto;
+  position: fixed;
+  right: 0;
 }
