--- a/src/components/ImageCard.css
+++ b/src/components/ImageCard.css
@@ -1,5 +1,5 @@
 .keen-slider__slide {
-  min-height: 100vh;
+  min-height: 100dvh;
   width: 50vw;
 }
 
@@ -9,24 +9,21 @@
   width: 100%;
 }
 
-
 @media (max-width: 900px) {
   .images-slider {
     flex-direction: column;
   }
 
   .keen-slider {
-    min-height: 50vh !important;
-    width: 100vw  !important;
+    min-height: 50dvh !important;
+    width: 100vw !important;
   }
 
   .keen-slider__slide {
     overflow: hidden;
-
   }
 
   .keen-slider__slide > img {
     rotate: 90deg;
   }
-
- }
+}
