--- a/src/components/TopBar.css
+++ b/src/components/TopBar.css
@@ -2,6 +2,13 @@
   position: fixed;
   z-index: 1000;
   top: 0;
+  right: 0;
+  cursor: "cell";
+}
+.back-btn {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
   left: 0;
   cursor: "cell";
 }
