--- a/src/components/ImageCard.css
+++ b/src/components/ImageCard.css
@@ -14,9 +14,12 @@
     flex-direction: column;
   }
 
+
+
   .keen-slider {
     min-height: 50dvh !important;
     width: 100vw !important;
+    pointer-events: none !important;
   }
 
   .keen-slider__slide {
