--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+@font-face {
+  font-family: 'Continental Heavy';
+  src: url('./assets/Continental-Heavy.otf') format('opentype');
+}
+
 body {
-  font-family: Continental;
-  font-weight: 900;
+  font-family: Continental Heavy;
   line-height: 1.2rem;
   color: #b2b2b2;
   cursor: crosshair;
