--- a/src/components/TopBar.css
+++ b/src/components/TopBar.css
@@ -8,7 +8,12 @@
 .back-btn {
   position: fixed;
   z-index: 1000;
-  top: 0;
-  left: 0;
-  cursor: "cell";
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0.5rem;
+  border: 0;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 0.25rem;
 }
