--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,10 +1,10 @@
 .images-slider {
   display: flex;
-  height: 100svh;
+  height: 100vh;
 }
 
 .images-slider > * {
-  min-height: 100svh;
+  min-height: 100vh;
 
   width: 50vw;
   overflow: hidden;
