--- a/src/components/ImageCard.css
+++ b/src/components/ImageCard.css
@@ -18,7 +18,7 @@
   }
 
   .keen-slider {
-    min-height: 50dvh !important;
+    min-height: 50svh !important;
     width: 100vw !important;
     /* pointer-events: none !important; */
   }
