--- a/src/components/ImageCard.css
+++ b/src/components/ImageCard.css
@@ -15,9 +15,11 @@
   }
   .images-slider {
     flex-direction: column;
+    height: 100svh !important;
   }
 
   .keen-slider {
+    height: 50svh !important;
     min-height: 50svh !important;
     width: 100vw !important;
     /* pointer-events: none !important; */
