--- a/src/components/ImageCard.css
+++ b/src/components/ImageCard.css
@@ -12,6 +12,7 @@
 @media (max-width: 900px) {
   html {
     font-size: 12.5px;
+    overflow: hidden !important;
   }
   .images-slider {
     flex-direction: column;
